--- a/app/views/end_user/end_users/_mutual_follow.html.erb
+++ b/app/views/end_user/end_users/_mutual_follow.html.erb
@@ -6,34 +6,36 @@
 <table class="table">
   <tbody>
   <% mutual_follows.each do |mutual_follow| %>
-    <tr>
-      <td style="vertical-align: middle;">
-        <%= link_to  end_user_path(mutual_follow), 'data-turbolinks': false do %>
-          <% if mutual_follow.images.present? %>
-            <img src='<%= mutual_follow.images.thumb.url %>' class="post_user_image" alt="プロフ写真">
-          <% else %>
-            <%= image_tag "sample.jpg", size: '50x50', class: "post_user_image" %>
+    <% unless mutual_follow.blocked_by?(current_end_user) || mutual_follow.blocker_by?(current_end_user) %>
+      <tr>
+        <td style="vertical-align: middle;">
+          <%= link_to  end_user_path(mutual_follow), 'data-turbolinks': false do %>
+            <% if mutual_follow.images.present? %>
+              <img src='<%= mutual_follow.images.thumb.url %>' class="post_user_image" alt="プロフ写真">
+            <% else %>
+              <%= image_tag "sample.jpg", size: '50x50', class: "post_user_image" %>
+            <% end %>
           <% end %>
-        <% end %>
-      </td>
-      <td style="vertical-align: middle;">
-        <%= link_to end_user_path(mutual_follow), 'data-turbolinks': false do %>
-          <h5><%= mutual_follow.name %></h5>
-        <% end %>
-      </td>
-      <td style="vertical-align: middle;">
-        <% if end_user == current_end_user %>
-          <%= link_to "メッセージを送る", chat_path(mutual_follow) %>
-        <% end %>
-      </td>
-      <td class="follow-btn" style="vertical-align: middle;">
-        <% if current_end_user == end_user %>
-          <%= link_to "", end_user_relationships_path(mutual_follow, user: "user"), method: :delete, remote: true, class: "fas fa-user-minus follow-btn-style" %>
-        <% end %>
+        </td>
+        <td style="vertical-align: middle;">
+          <%= link_to end_user_path(mutual_follow), 'data-turbolinks': false do %>
+            <h5><%= mutual_follow.name %></h5>
+          <% end %>
+        </td>
+        <td style="vertical-align: middle;">
+          <% if end_user == current_end_user %>
+            <%= link_to "メッセージを送る", chat_path(mutual_follow) %>
+          <% end %>
+        </td>
+        <td class="follow-btn" style="vertical-align: middle;">
+          <% if current_end_user == end_user %>
+            <%= link_to "", end_user_relationships_path(mutual_follow, user: "user"), method: :delete, remote: true, class: "fas fa-user-minus follow-btn-style" %>
+          <% end %>
 
-        <!--余裕があれば他人のホームでフォローボタンを表示する(前回ややこしくて諦めた)-->
-      </td>
-    </tr>
+          <!--余裕があれば他人のホームでフォローボタンを表示する(前回ややこしくて諦めた)-->
+        </td>
+      </tr>
+    <% end %>
   <% end %>
   </tbody>
 </table>
