--- a/app/views/end_user/favorites/create.js.erb
+++ b/app/views/end_user/favorites/create.js.erb
@@ -1,4 +1,5 @@
 $('#favorites-count_<%= @post.id %>').html("<%= j(render partial: 'end_user/favorites/favorite_count', locals: {target_post: @post}) %>");
 $('#favorite_<%= @post.id %>').html("<%= j(render partial: 'end_user/favorites/favorite', locals: {target_post: @post}) %>");
+$('#favorite_user_<%= @post.id %>').html("<%= j(render partial: 'end_user/favorites/favorite_user', locals: {target_post: @post}) %>");
 
 
