--- a/app/views/end_user/notifications/index.html.erb
+++ b/app/views/end_user/notifications/index.html.erb
@@ -1,13 +1,19 @@
-<div class="col-xs-10 offset-1">
-  <h5>通知</h5>
+<div class="col-xs-5 col-xs-offset-3">
+  <h5 class="text-center">通知</h5>
     <%= link_to notifications_destroy_all_path, method: :delete do %>
-      <i class="fas fa-trash" style="color: black;"></i>
-      <h7 style="color: black;">全削除</h7>
+      <div class="text-right">
+        <h6 class="fas fa-trash" style="color: black;">全削除</h6>
+      </div>
     <% end %>
   <% if @notifications.exists? %>
-    <%= render @notifications %>
-    <%= paginate @notifications %>
+    <div class="jscroll jscroll-select notice-main">
+      <%= render @notifications %>
+      <%= paginate @notifications %>
+    </div>
   <% else %>
     <p>通知はありません</p>
   <% end %>
+</div>
+<div class="scroll-event">
+  <a href="#" class="scroll-btn-post"><i class="fas fa-long-arrow-alt-up"></i></a>
 </div>
