--- a/app/views/end_user/posts/index.html.erb
+++ b/app/views/end_user/posts/index.html.erb
@@ -1,55 +1,57 @@
 <div class="col-xs-7 col-xs-offset-1">
-  <main class="main jscroll posts-list">
+  <main class="main jscroll jscroll-select">
     <% @public_posts.each do |public_post| %>
-    <div class="content">
-      <div class="content_user">
-        <span>
-          <%= link_to  end_user_path(public_post.end_user), 'data-turbolinks': false do %>
-            <% if public_post.end_user.images.present? %>
-              <img src='<%= public_post.end_user.images.thumb.url %>' class="post_user_image" alt="プロフ写真">
-            <% else %>
-              <%= image_tag "sample.jpg", size: '50x50', class: "post_user_image" %>
-            <% end %>
-        </span>
-        <span><%= public_post.end_user.name %></span>
-          <% end %>
-      </div>
-      <div class="content_image">
-        <img src='<%= public_post.images.url %>' class="post_image" alt="ユーザー投稿写真">
-      </div>
-      <div class="content_foot">
-        <div class="list-icon">
-          <span class="icon">
-            <%= link_to "", post_path(public_post), class: "far fa-comment-dots icon-size" %>
-            <spam id="favorite_<%= public_post.id %>">
-              <%= render 'end_user/favorites/favorite', target_post: public_post %>
-            </spam>
-            <% if public_post.end_user != current_end_user %>
-              <%= link_to "", chat_path(public_post.end_user), class: "fas fa-sms icon-size" %>
-            <% end %>
-            <spam id="bookmark_<%= public_post.id %>">
-              <%= render 'end_user/bookmarks/bookmark', target_post: public_post %>
-            </spam>
+      <% unless public_post.end_user.blocked_by?(current_end_user) || public_post.end_user.blocker_by?(current_end_user) %>
+      <div class="content">
+        <div class="content_user">
+          <span>
+            <%= link_to  end_user_path(public_post.end_user), 'data-turbolinks': false do %>
+              <% if public_post.end_user.images.present? %>
+                <img src='<%= public_post.end_user.images.thumb.url %>' class="post_user_image" alt="プロフ写真">
+              <% else %>
+                <%= image_tag "sample.jpg", size: '50x50', class: "post_user_image" %>
+              <% end %>
           </span>
+          <span><%= public_post.end_user.name %></span>
+            <% end %>
         </div>
-        <div id="favorites-count_<%= public_post.id %>" class="favorite-count">
-          <%= render 'end_user/favorites/favorite_count', target_post: public_post %>
+        <div class="content_image">
+          <img src='<%= public_post.images.url %>' class="post_image" alt="ユーザー投稿写真">
         </div>
-        <div class="post-body">
-          <h4 class="post-title"><%= public_post.title %>【<%= public_post.genre.name %>】</h4>
-          <h5 class="subtitle"><%= public_post.subtitle %></h5>
-          <ul class="detail-list">
-            <li class="creation-time"><%= "#{time_ago_in_words(public_post.created_at)}前" %></li>
-            <li class="view-detail-btn">
-              <%= link_to "詳しく見る...", post_path(public_post), class: "link-post-detail text-right" %>
-            </li>
-          </ul>
-          <div class="comment-text">
-            <%= render 'end_user/comments/form', target_post: public_post, comment: @comment_new %>
+        <div class="content_foot">
+          <div class="list-icon">
+            <span class="icon">
+              <%= link_to "", post_path(public_post), class: "far fa-comment-dots icon-size" %>
+              <spam id="favorite_<%= public_post.id %>">
+                <%= render 'end_user/favorites/favorite', target_post: public_post %>
+              </spam>
+              <% if public_post.end_user != current_end_user %>
+                <%= link_to "", chat_path(public_post.end_user), class: "fas fa-sms icon-size" %>
+              <% end %>
+              <spam id="bookmark_<%= public_post.id %>">
+                <%= render 'end_user/bookmarks/bookmark', target_post: public_post %>
+              </spam>
+            </span>
+          </div>
+          <div id="favorites-count_<%= public_post.id %>" class="favorite-count">
+            <%= render 'end_user/favorites/favorite_count', target_post: public_post %>
+          </div>
+          <div class="post-body">
+            <h4 class="post-title"><%= public_post.title %>【<%= public_post.genre.name %>】</h4>
+            <h5 class="subtitle"><%= public_post.subtitle %></h5>
+            <ul class="detail-list">
+              <li class="creation-time"><%= "#{time_ago_in_words(public_post.created_at)}前" %></li>
+              <li class="view-detail-btn">
+                <%= link_to "詳しく見る...", post_path(public_post), class: "link-post-detail text-right" %>
+              </li>
+            </ul>
+            <div class="comment-text">
+              <%= render 'end_user/comments/form', target_post: public_post, comment: @comment_new %>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+      <% end %>
     <% end %>
   <%= paginate @public_posts %>
   </main>
