--- a/app/views/end_user/relationships/_create_follow.html.erb
+++ b/app/views/end_user/relationships/_create_follow.html.erb
@@ -1,12 +1,14 @@
 <tbody>
   <% followers.each do |follower| %>
-	<tr>
-	  <td>
-	  	<%= link_to follower.name, end_user_path(follower) %>
-	  </td>
-	  <td>
-      <%= link_to "", end_user_relationships_path(follower), method: :post, remote: true, class: "fas fa-user-plus follow-btn-style",'data-turbolinks': false %>
-	  </td>
-	</tr>
+    <% unless follower.blocked_by?(current_end_user) || follower.blocker_by?(current_end_user) %>
+			<tr>
+			  <td>
+			  	<%= link_to follower.name, end_user_path(follower) %>
+			  </td>
+			  <td>
+  		    <%= link_to "", end_user_relationships_path(follower), method: :post, remote: true, class: "fas fa-user-plus follow-btn-style",'data-turbolinks': false %>
+			  </td>
+			</tr>
+		<% end %>
   <% end %>
 </tbody>
