--- a/app/views/end_user/searchs/_search_sidebar.html.erb
+++ b/app/views/end_user/searchs/_search_sidebar.html.erb
@@ -17,6 +17,10 @@
 	  	<span class="caret"></span>
 	    </button>
 	    <ul class="dropdown-menu" role="menu">
+	      <li role="presentation" class="dropdown-header">いいね！のから並び替え</li>
+	  	  <li role="presentation">
+          <%= link_to "いいね！多い順", search_path('order': "favorite", 'terms': "desc", 'search_model': "post", 'search_value': @value, 'search_how': @how) %>
+	  	  </li>
 	    	<li role="presentation" class="dropdown-header">費用から並び替え</li>
 	    	<li role="presentation">
           <%= link_to "費用の高い順", search_path('order': "cost", 'terms': "desc", 'search_model': "post", 'search_value': @value, 'search_how': @how) %>
