--- a/app/views/end_user/end_users/_quit.html.erb
+++ b/app/views/end_user/end_users/_quit.html.erb
@@ -1,4 +1,4 @@
-<button type="button" id="quitbutton" class="btn btn-denger btn-sm">
+<button type="button" id="quitbutton" class="quit-modal">
   サインアウトする
 </button>
 
@@ -8,12 +8,14 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal"><span>×</span></button>
-				<h4 class="modal-title text-left">確認事項</h4>
+				<h4 class="modal-title text-center">確認事項</h4>
 			</div>
-			<div class="modal-body text-left">
-				サインアウトすると、登録情報や<br>
-        これまでの投稿内容等の閲覧できなくなります。<br>
-        サインアウトする場合は、「サインアウト」をクリックしてください。<br>
+			<div class="modal-body text-center">
+				<p>
+					サインアウトすると、登録情報やこれまでの<br>
+        	投稿内容等の閲覧できなくなります。<br>
+        	サインアウトする場合は、「サインアウト」をクリックしてください。<br>
+        </p>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
