--- a/app/views/end_user/relationships/_request_follow.html.erb
+++ b/app/views/end_user/relationships/_request_follow.html.erb
@@ -11,7 +11,7 @@
 				<h5 class="modal-title">フォロー申請一覧</h5>
 			</div>
 			<div class="modal-body">
-        <table class="table follow-btn2">
+        <table class="table follow-btn-request">
         	<%= render 'end_user/relationships/create_follow', followers: @followers %>
         </table>
 			</div>
