--- a/app/views/end_user/searchs/search.html.erb
+++ b/app/views/end_user/searchs/search.html.erb
@@ -10,7 +10,7 @@
     <% end %>
   <% end %>
 </div>
-<%= render 'search_sidebar', genres: @genres %>
+<%= render 'post_sidebar', genres: @genres %>
 
 <div class="scroll-event">
   <a href="#" class="scroll-btn-post"><i class="fas fa-long-arrow-alt-up"></i></a>
