--- a/app/assets/stylesheets/end_user/blocks.scss
+++ b/app/assets/stylesheets/end_user/blocks.scss
@@ -1,3 +1,34 @@
 // Place all the styles related to the end_user::blocks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.block-user-box {
+  border: 1px solid rgba(211,211,211,0.5);
+  border-radius: 0.2em;
+  background-color: white;
+  padding: 10px;
+  margin-right: 10px;
+  min-height: 560px!important;
+  overflow-y: scroll!important;
+
+  .unblock-content {
+    width: 360px;
+    margin: 20px auto;
+  }
+}
+
+.block-description {
+  border: 1px solid rgba(211,211,211,0.5);
+  border-radius: 0.2em;
+  background-color: white;
+  padding: 10px;
+  margin-left: 10px;
+
+  h5 {
+    font-size: 16px;
+    padding-bottom: 10px;
+    border-bottom: 1px dotted gray;
+  }
+  p {
+    line-height: 25px;
+  }
+}
