--- a/app/assets/stylesheets/end_user/chats.scss
+++ b/app/assets/stylesheets/end_user/chats.scss
@@ -47,7 +47,7 @@
     font-size: 16px;
     border: none;
     background-color: white;
-    color: lightblue;
+    color: rgba(0,0,205,0.7);
   }
 }
 
@@ -83,4 +83,16 @@
 .message-left {
   display: flex;
   justify-content: flex-start;
+}
+
+.chat-notice-circle {
+  padding: 0;
+  margin: 0;
+  color: rgba(105,105,105,0.6);
+  font-size: 13px;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  background-color: rgba(255,240,0,0.7);
+  text-align: center;
 }
