--- a/app/assets/stylesheets/end_user/relationships.scss
+++ b/app/assets/stylesheets/end_user/relationships.scss
@@ -1,3 +1,27 @@
 // Place all the styles related to the end_user::relationships controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.follow-btn {
+
+  p {
+    margin: 0;
+  }
+}
+
+.follow-btn-style {
+  border: 1px solid rgba(211,211,211,1);
+  border-radius: 5px;
+  padding: 7px 5px;
+  text-decoration: none!important;
+  color: black;
+  font-weight: 550;
+}
+.request-follow-btn {
+  border: none;
+  background-color: #f8f8f8;
+  margin-top: 20px;
+  border: 1px solid rgba(211,211,211,1);
+  border-radius: 5px;
+  padding: 4px;
+}
