--- a/app/views/end_user/blocks/index.html.erb
+++ b/app/views/end_user/blocks/index.html.erb
@@ -1,13 +1,18 @@
-<div class="col-xs-5 col-xs-offset-2">
-  <h4>ブロック中ユーザー</h4>
-  <table class="table unblock-content">
+<div class="col-xs-5 col-xs-offset-2 block-user-box">
+  <h4 class="text-center">ブロック中のユーザー</h4>
+  <table class="table unblock-content text-center">
     <%= render 'index', user_blocks: @user_blocks %>
   </table>
 </div>
-<div class="col-xs-3">
-  <h5>アプリ内ブロックに関して</h5>
+<div class="col-xs-3 block-description">
+  <h5>～アプリ内ブロックに関して～</h5>
   <p>
-    ブロックしているユーザーからは、<%= current_end_user.name %>さんの投稿やマイページなどの情報は一切閲覧できません。<br>
-    また、ブロックを解除しない限り<%= current_end_user.name %>さんがブロックしてる人の投稿やマイページは閲覧できません。
+    ブロックしているユーザーからは、<%= current_end_user.name %>さんの投稿やマイページなどの情報は一切閲覧できません。
+  </p>
+  <p>
+    ブロックを解除しない限り<%= current_end_user.name %>さんがブロックしてる人の投稿やマイページは閲覧できません。
+  </p>
+  <p>
+    ブロックをすると同時に対象のユーザーとの通知やトークルーム、フォローも削除されます。
   </p>
 </div>
