--- a/app/views/end_user/end_users/_search_index.html.erb
+++ b/app/views/end_user/end_users/_search_index.html.erb
@@ -1,8 +1,7 @@
-<main class="search-all col-xs-11">
+<main class="search-all col-xs-11 jscroll jscroll-select">
   <table class="table">
     <tbody>
     <% end_users.each do |end_user| %>
-      <% unless end_user.blocked_by?(current_end_user) || end_user.blocker_by?(current_end_user) %>
       <tr>
         <td style="vertical-align: middle;">
           <%= link_to  end_user_path(end_user) do %>
@@ -23,14 +22,12 @@
             <%= link_to "メッセージを送る", chat_path(end_user) %>
           <% end %>
         </td>
-        <td class="follow-btn" style="vertical-align: middle;">
+        <td class="follow-btn_<%= end_user.id %>" style="vertical-align: middle;">
           <%= render 'end_user/relationships/follow', end_user: end_user %>
         </td>
       </tr>
-      <% else %>
-        <p>該当する検索結果はありません</p>
-      <% end %>
     <% end %>
+    <%= paginate end_users %>
     </tbody>
   </table>
 </main>
