--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -29,7 +29,7 @@
           <th>難易度</th>
           <td class="td-color"><%= @post.level %></td>
           <th>リンク</th>
-          <td class="td-color"><%= @post.link %></td>
+          <td class="td-color"><a href="<%= @post.link %>"><%= @post.link %></a></td>
         </tr>
         <tr>
           <th>費用</th>
