--- a/app/views/end_user/chats/create.js.erb
+++ b/app/views/end_user/chats/create.js.erb
@@ -1,3 +1,4 @@
 $('.message').append("<td class='text-right message-right'><p class='message-box-right' style='text-align: right; font-weight: normal;'><%= @chat.message %></p></td>");
+$("#error_explanation").html("<%= j(render 'layouts/error', { model: @chat }) %>")
 $('input[type=text]').val("")
 
