--- a/app/views/end_user/posts/edit.html.erb
+++ b/app/views/end_user/posts/edit.html.erb
@@ -21,9 +21,9 @@
         <div class="material-area">
           <%= f.fields_for :materials, @draft_post.materials do |m| %>
             <span class="js-material-group" data-index="<%= m.index %>">
-              <spam class="material_name"><%= m.text_field :material_name, placeholder: "材料or道具...", size: "12", class: "text-form" %></spam>
-              <spam class="material_shop"><%= m.text_field :shop, placeholder: "購入先...", size: "12", class: "text-form" %></spam>
-              <spam class="delete-form-btn">削除</spam>
+              <span class="material_name"><%= m.text_field :material_name, placeholder: "材料or道具...", size: "12", class: "text-form" %></span>
+              <span class="material_shop"><%= m.text_field :shop, placeholder: "購入先...", size: "12", class: "text-form" %></span>
+              <span class="delete-form-btn">削除</span>
             </span><br>
             <%= m.hidden_field :post_id, value: @draft_post.id %>
           <% end %>
@@ -39,7 +39,7 @@
           <%= f.fields_for :works, pw do |w| %>
                 <div class="js-work-group" data-index="<%= w.index %>">
                   <span class="js-work-num">〖<%= w.index + 1 %>〗</span>
-                  <spam class="delete-work-btn">削除</spam><br>
+                  <span class="delete-work-btn">削除</span><br>
                     <%= w.file_field :images, id: "works_img", class: 'work_img_field', style: 'display:none;' %>
                     <% if pw.images? %>
                       <%= image_tag pw.images.small.url, size: '115x75', onClick: "imgClick(this)", id: "work_img_prev", class: "img-size" %>
