[update]エラーメッセージ日本語化、非同期 rspec記述開始

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -423,7 +423,8 @@ ul.pagination {
 
      li {
        list-style: none;
-       width: 80%;
+       width: 100%;
+       text-align: center;
      }
    }
 }
